# ai-dlc-demo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  index.html  pom.xml
.github/: copilot-instructions.md
.github/instructions/: go-backend.instructions.md  memory-bank.instructions.md  react-frontend.instructions.md  workflow-engine.instructions.md
.github/skills/expert-python-aiml-developer/skeleton/: .env.example  .gitignore  Dockerfile  README.md  augmentation_template.py  image_classifier_template.py  object_detector_template.py  predictor_template.py  pyproject.toml  trainer_template.py
.github/skills/expert-python-aiml-developer/skeleton/configs/: inference_config.yaml  model_config.yaml  training_config.yaml
.github/skills/expert-python-aiml-developer/skeleton/scripts/: evaluate.py  train.py
.github/skills/expert-python-aiml-developer/skeleton/src/api/: main.py
.github/skills/expert-python-aiml-developer/skeleton/src/api/routes/: health.py  predictions.py
.github/skills/expert-python-aiml-developer/skeleton/src/config/: __init__.py  settings.py
.github/skills/expert-python-aiml-developer/skeleton/src/data/: __init__.py  loaders.py  preprocessors.py
.github/skills/expert-python-aiml-developer/skeleton/src/models/: __init__.py  base.py  losses.py
.github/skills/expert-python-aiml-developer/skeleton/src/utils/: __init__.py  logging.py  reproducibility.py
.github/skills/expert-python-aiml-developer/skeleton/tests/: conftest.py
.github/workflows/: README.md  ci.yml  route-validation.yml  test.yml
admin-web-interface/: index.html  package-lock.json  package.json
admin-web-interface/src/: App.jsx  index.css
assets/: index-BZ_eUm01.js  index-Cla62yvZ.css
av-platform-shared/: pom.xml
infrastructure/k8s/: namespaces.yaml  network-policy-pay.yaml  resource-quotas.yaml
infrastructure/kafka/: kafka-config.yml  topics-init.sh
infrastructure/kong/: kong.conf  kong.yml
infrastructure/mongodb/: application-mongodb.yml  replica-set-init.js
infrastructure/nats/: README.md  nats-server.conf
infrastructure/redis/: README.md  application-redis.yml  redis.conf
project-documentation/: ARCHITECTURE_SPEC.md  MASTER_PLAN.md  OVERVIEW.md  PRD.md  requirement-project.txt
project-documentation/plans/: DETAIL_PLAN_ABI.md  DETAIL_PLAN_BMS.md  DETAIL_PLAN_FPE.md  DETAIL_PLAN_MKP.md  DETAIL_PLAN_NCS.md  (+3 more)
(+514 files in other folders)
